--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
           <h2>Col. Heading</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mattis orci libero, nec tristique dui euismod vel. Proin vel quam rhoncus, vehicula orci quis, tempus magna. Cras vitae placerat mauris, et suscipit tortor. Cras purus nisl, efficitur ac volutpat vitae, viverra nec velit. Nam malesuada nec quam at sollicitudin. Donec at suscipit risus. Phasellus semper fermentum tortor a porttitor. Proin feugiat urna et massa ullamcorper, sit amet ullamcorper nunc euismod. Nunc eget convallis ipsum. Ut imperdiet, risus a mattis tincidunt, ex justo tincidunt eros, eu finibus neque metus vel est. Nulla sed aliquet libero. Vestibulum sed orci eu leo mollis facilisis ut at mauris. Nunc urna orci, sollicitudin interdum gravida in, dapibus et neque.</p>
         </div>
+        <div class="col-md-4">
+          <h2>Col. Heading</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mattis orci libero, nec tristique dui euismod vel. Proin vel quam rhoncus, vehicula orci quis, tempus magna. Cras vitae placerat mauris, et suscipit tortor. Cras purus nisl, efficitur ac volutpat vitae, viverra nec velit. Nam malesuada nec quam at sollicitudin. Donec at suscipit risus. Phasellus semper fermentum tortor a porttitor. Proin feugiat urna et massa ullamcorper, sit amet ullamcorper nunc euismod. Nunc eget convallis ipsum. Ut imperdiet, risus a mattis tincidunt, ex justo tincidunt eros, eu finibus neque metus vel est. Nulla sed aliquet libero. Vestibulum sed orci eu leo mollis facilisis ut at mauris. Nunc urna orci, sollicitudin interdum gravida in, dapibus et neque.</p>
+        </div>
+        <div class="col-md-4">
+          <h2>Col. Heading</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mattis orci libero, nec tristique dui euismod vel. Proin vel quam rhoncus, vehicula orci quis, tempus magna. Cras vitae placerat mauris, et suscipit tortor. Cras purus nisl, efficitur ac volutpat vitae, viverra nec velit. Nam malesuada nec quam at sollicitudin. Donec at suscipit risus. Phasellus semper fermentum tortor a porttitor. Proin feugiat urna et massa ullamcorper, sit amet ullamcorper nunc euismod. Nunc eget convallis ipsum. Ut imperdiet, risus a mattis tincidunt, ex justo tincidunt eros, eu finibus neque metus vel est. Nulla sed aliquet libero. Vestibulum sed orci eu leo mollis facilisis ut at mauris. Nunc urna orci, sollicitudin interdum gravida in, dapibus et neque.</p>
+        </div>
       </div>
     </div>
 
